# opcua-examples

./: .gitignore  .gitmodules
alarm-server/c/: CMakeLists.txt
common/c/: common.cmake
encription-server/c/: CMakeLists.txt  encription-server.c
event-server/c/: CMakeLists.txt  event-server.c
event-server/cpp/: CMakeLists.txt
method-client/clojure/: deps.edn
method-client/clojure/src/opcua/: core.clj
method-client/cpp/: CMakeLists.txt  method-client.cpp
method-server/cpp/: CMakeLists.txt
pubsub-publish/c/: CMakeLists.txt  pubsub-publish.c
pubsub-subscribe/c/: CMakeLists.txt  pubsub-subscribe.c
simple-client/c/: CMakeLists.txt  simple-client.c
simple-client/clojure/: deps.edn
simple-client/clojure/src/opcua/: simple_client.clj
simple-client/cpp/: CMakeLists.txt  simple-client.cpp
simple-client/python/: pyproject.toml  simple-client.py
simple-client/rust/: .gitignore  Cargo.toml
simple-client/rust/src/: main.rs
simple-server/c/: CMakeLists.txt  simple-server.c
simple-server/clojure/: deps.edn
simple-server/clojure/src/opcua/: simple_server.clj
simple-server/cpp/: CMakeLists.txt  simple-server.cpp
variable_client/c/: CMakeLists.txt  variable-client.c
variable_client/clojure/: deps.edn
variable_client/clojure/src/opcua/: variable_client.clj
variable_client/cpp/: CMakeLists.txt  variable-client.cpp
variable_server/c/: CMakeLists.txt  variable-server.c
variable_server/cpp/: CMakeLists.txt  variable-server.cpp
